--- a/ficc2025/Server/ficc2025.Server.csproj
+++ b/ficc2025/Server/ficc2025.Server.csproj
@@ -15,5 +15,9 @@
     <ProjectReference Include="..\Shared\ficc2025.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 
 </Project>
